--- a/requirements.txt
+++ b/requirements.txt
@@ -1,119 +1,149 @@
-absl-py==0.10.0
-argon2-cffi==20.1.0
-astroid==2.5
+absl-py==1.2.0
+argon2-cffi==21.3.0
+argon2-cffi-bindings==21.2.0
+astroid==2.12.9
+asttokens==2.0.8
 astunparse==1.6.3
 async-generator==1.10
-attrs==20.3.0
-autopep8==1.5.5
+attrs==22.1.0
+autopep8==1.7.0
 backcall==0.2.0
-bleach==3.3.0
-cachetools==4.2.1
-certifi==2020.12.5
-cffi==1.14.5
-chardet==4.0.0
-click==7.1.2
-decorator==4.4.2
-defusedxml==0.6.0
-dill==0.3.3
-entrypoints==0.3
-flatbuffers==1.12
+beautifulsoup4==4.11.1
+bleach==5.0.1
+cachetools==5.2.0
+certifi==2022.6.15
+cffi==1.15.1
+chardet==5.0.0
+charset-normalizer==2.1.1
+click==8.1.3
+cycler==0.11.0
+debugpy==1.6.3
+decorator==5.1.1
+defusedxml==0.7.1
+dill==0.3.5.1
+entrypoints==0.4
+etils==0.7.1
+executing==1.0.0
+fastjsonschema==2.16.1
+flatbuffers==2.0.7
+fonttools==4.37.1
 future==0.18.2
-gast==0.3.3
-google-auth==1.27.0
-google-auth-oauthlib==0.4.2
+gast==0.4.0
+google-auth==2.11.0
+google-auth-oauthlib==0.4.6
 google-pasta==0.2.0
-googleapis-common-protos==1.52.0
-grpcio==1.32.0
-h5py==2.10.0
-idna==2.10
-importlib-resources==5.1.0
+googleapis-common-protos==1.56.4
+grpcio==1.48.1
+h5py==3.7.0
+idna==3.3
+importlib-metadata==4.12.0
+importlib-resources==5.9.0
 iniconfig==1.1.1
-ipykernel==5.5.0
-ipython==7.20.0
+ipykernel==6.15.2
+ipython==8.5.0
 ipython-genutils==0.2.0
-ipywidgets==7.6.3
-isort==5.7.0
-jedi==0.18.0
-Jinja2==2.11.3
-joblib==1.0.1
-jsonschema==3.2.0
+ipywidgets==8.0.2
+isort==5.10.1
+jedi==0.18.1
+Jinja2==3.1.2
+joblib==1.1.0
+jsonschema==4.15.0
 jupyter==1.0.0
-jupyter-client==6.1.11
-jupyter-console==6.2.0
-jupyter-core==4.7.1
-jupyterlab-pygments==0.1.2
-jupyterlab-widgets==1.0.0
-Keras==2.4.3
+jupyter-console==6.4.4
+jupyter-core==4.11.1
+jupyter_client==7.3.5
+jupyterlab-pygments==0.2.2
+jupyterlab-widgets==3.0.3
+keras==2.8.0
 Keras-Preprocessing==1.1.2
-lazy-object-proxy==1.5.2
-Markdown==3.3.4
-MarkupSafe==1.1.1
-mccabe==0.6.1
-mistune==0.8.4
-nbclient==0.5.2
-nbconvert==6.0.7
-nbformat==5.1.2
-nest-asyncio==1.5.1
-notebook==6.2.0
-numpy==1.19.5
-oauthlib==3.1.0
-opencv-python==4.5.1.48
+kiwisolver==1.4.4
+lazy-object-proxy==1.7.1
+libclang==14.0.6
+lxml==4.9.1
+Markdown==3.4.1
+MarkupSafe==2.1.1
+matplotlib==3.5.3
+matplotlib-inline==0.1.6
+mccabe==0.7.0
+mistune==2.0.4
+nbclient==0.6.7
+nbconvert==7.0.0
+nbformat==5.4.0
+nest-asyncio==1.5.5
+notebook==6.4.12
+numpy==1.23.2
+oauthlib==3.2.0
+opencv-python==4.6.0.66
 opt-einsum==3.3.0
-packaging==20.9
-pandas==1.2.2
-pandocfilters==1.4.3
-parso==0.8.1
+packaging==21.3
+pandas==1.4.4
+pandocfilters==1.5.0
+parso==0.8.3
 pexpect==4.8.0
 pickleshare==0.7.5
-pluggy==0.13.1
-prometheus-client==0.9.0
+Pillow==9.2.0
+pkgutil_resolve_name==1.3.10
+platformdirs==2.5.2
+pluggy==1.0.0
+prometheus-client==0.14.1
 promise==2.3
-prompt-toolkit==3.0.16
-protobuf==3.15.2
+prompt-toolkit==3.0.31
+protobuf==3.19.4
+psutil==5.9.2
 ptyprocess==0.7.0
-py==1.10.0
+pure-eval==0.2.2
+py==1.11.0
 pyasn1==0.4.8
 pyasn1-modules==0.2.8
-pycodestyle==2.6.0
-pycparser==2.20
-Pygments==2.8.0
-pylint==2.7.1
-pyparsing==2.4.7
-pyrsistent==0.17.3
-pytest==6.2.2
-python-dateutil==2.8.1
-pytz==2021.1
-PyYAML==5.4.1
-pyzmq==22.0.3
-qtconsole==5.0.2
-QtPy==1.9.0
-requests==2.25.1
-requests-oauthlib==1.3.0
-rsa==4.7.2
-scikit-learn==0.24.1
-scipy==1.6.1
-Send2Trash==1.5.0
-six==1.15.0
+pycodestyle==2.9.1
+pycparser==2.21
+Pygments==2.13.0
+pylint==2.15.2
+pyparsing==3.0.9
+pyrsistent==0.18.1
+pytest==7.1.3
+python-dateutil==2.8.2
+pytz==2022.2.1
+PyYAML==6.0
+pyzmq==23.2.1
+qtconsole==5.3.2
+QtPy==2.2.0
+requests==2.28.1
+requests-oauthlib==1.3.1
+rsa==4.9
+scikit-learn==1.1.2
+scipy==1.9.1
+Send2Trash==1.8.0
+six==1.16.0
 sklearn==0.0
-tensorboard==2.4.1
-tensorboard-plugin-wit==1.8.0
-tensorflow==2.4.1
-tensorflow-datasets==4.2.0
-tensorflow-estimator==2.4.0
-tensorflow-metadata==0.28.0
+soupsieve==2.3.2.post1
+stack-data==0.5.0
+tensorboard==2.8.0
+tensorboard-data-server==0.6.1
+tensorboard-plugin-wit==1.8.1
+tensorflow==2.8.0
+tensorflow-datasets==4.6.0
+tensorflow-estimator==2.10.0
+tensorflow-io-gcs-filesystem==0.26.0
+tensorflow-metadata==1.10.0
 termcolor==1.1.0
-terminado==0.9.2
-testpath==0.4.4
-threadpoolctl==2.1.0
+terminado==0.15.0
+testpath==0.6.0
+tf-estimator-nightly==2.8.0.dev2021122109
+threadpoolctl==3.1.0
+tinycss2==1.1.1
 toml==0.10.2
-tornado==6.1
-tqdm==4.57.0
-traitlets==5.0.5
-typer==0.3.2
-typing-extensions==3.7.4.3
-urllib3==1.26.3
+tomli==2.0.1
+tomlkit==0.11.4
+tornado==6.2
+tqdm==4.64.1
+traitlets==5.3.0
+typer==0.6.1
+typing_extensions==4.3.0
+urllib3==1.26.12
 wcwidth==0.2.5
 webencodings==0.5.1
-Werkzeug==1.0.1
-widgetsnbextension==3.5.1
-wrapt==1.12.1
+Werkzeug==2.2.2
+widgetsnbextension==4.0.3
+wrapt==1.14.1
+zipp==3.8.1
