--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -22,6 +22,8 @@ RUN curl -sS https://dl.yarnpkg.com/debian/pubkey.gpg | sudo apt-key add - \
     libopencv-dev \
     python3-opencv
 
+ENV PYTHONPATH "${PYTHONPATH}:/workspaces/FaceDetection-tf2"
+
 EXPOSE 8888 6006
 # [Optional] Uncomment this line to install global node packages.
 # RUN su vscode -c "source /usr/local/share/nvm/nvm.sh && npm install -g <your-package-here>" 2>&1
