--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -13,6 +13,10 @@
 			"NODE_VERSION": "lts/*"
 		}
 	},
+	"runArgs": [
+		"--dns",
+		"8.8.8.8"
+	],
 	// Set *default* container specific settings.json values on container create.
 	"settings": {
 		"terminal.integrated.shell.linux": "/bin/bash",
@@ -31,7 +35,10 @@
 		"python.autoComplete.extraPaths": [
 			"/usr/local/lib/python3.8/site-packages"
 		],
-		"python.sortImports.args": ["--line-width", "120"],
+		"python.sortImports.args": [
+			"--line-width",
+			"120"
+		],
 		"editor.rulers": [
 			120
 		],
@@ -56,7 +63,12 @@
 		"[markdown]": {
 			"files.trimTrailingWhitespace": false,
 			"editor.renderWhitespace": "boundary"
-		}
+		},
+		"python.testing.pytestArgs": [
+			"test"
+		],
+		"python.testing.unittestEnabled": false,
+		"python.testing.pytestEnabled": true
 	},
 	// Add the IDs of extensions you want installed when the container is created.
 	"extensions": [
@@ -71,7 +83,8 @@
 		"streetsidesoftware.code-spell-checker",
 		"gruntfuggly.todo-tree",
 		"ionutvmi.path-autocomplete",
-		"ms-azuretools.vscode-dockers"
+		"ms-azuretools.vscode-dockers",
+		"GitHub.copilot"
 	],
 	// Use 'forwardPorts' to make a list of ports inside the container available locally.
 	// "forwardPorts": [],
